# YDownloader

./: .gitignore  README.md  main.py  mani.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
.install_setup/: windows_command.txt
config/: config.json  requirements.txt
configs/: config.json
src/: main.py
